break it all - init bevy rewrite

--- a/src-legacy/.vscode/tasks.json
+++ b/src-legacy/.vscode/tasks.json
@@ -4,19 +4,19 @@
         {
             "label": "run.py",
             "type": "shell",
-            "command": "src/run.py",
+            "command": "./run.py",
             "problemMatcher": []
         },
         {
             "label": "run.py (2)",
             "type": "shell",
-            "command": "src/run.py",
+            "command": "./run.py",
             "problemMatcher": []
         },
         {
             "label": "server.py",
             "type": "shell",
-            "command": "src/server.py",
+            "command": "./server.py",
             "problemMatcher": []
         }
     ]
