--- a/src/.cargo/config.toml
+++ b/src/.cargo/config.toml
@@ -2,5 +2,12 @@
 linker = "rust-lld.exe" # Use LLD Linker
 rustflags = [
   "-Zshare-generics=off", # (Nightly)
-  "-Zthreads=0",        # (Nightly) Use improved multithreading with the recommended amount of threads.
+  # "-Zthreads=0",        # (Nightly) Use improved multithreading with the recommended amount of threads.
+]
+
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = [
+  "-Zshare-generics=y", # (Nightly)
+  "-C", "link-arg=-fuse-ld=/usr/bin/mold",
 ]
