--- a/src/.cargo/config.toml
+++ b/src/.cargo/config.toml
@@ -2,12 +2,14 @@
 linker = "rust-lld.exe" # Use LLD Linker
 rustflags = [
   "-Zshare-generics=off", # (Nightly)
-  # "-Zthreads=0",        # (Nightly) Use improved multithreading with the recommended amount of threads.
+  "-Zthreads=0",        # (Nightly) Use improved multithreading with the recommended amount of threads.
 ]
 
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
 rustflags = [
   "-Zshare-generics=y", # (Nightly)
+  "-Zthreads=0",        # (Nightly) Use improved multithreading with the recommended amount of threads.
+  "-Zlet-chains=y",
   "-C", "link-arg=-fuse-ld=/usr/bin/mold",
 ]
