--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Reed Debaets <reed.debaets@gmail.com>"]
 [dependencies]
 bevy = { version = "0.14", features = ["dynamic_linking"] }
 bevy_renet = "0.0.12"
+bimap = "0.6"
 bincode = "1.3"
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
 renet = { version = "0.0.16", features = ["serde"] }
