--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -9,7 +9,8 @@ bevy = { version = "0.14", features = ["dynamic_linking"] }
 bevy_renet = "0.0.12"
 bimap = "0.6"
 bincode = "1.3"
-log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
+log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
+noise = { version = "0.9" }
 renet = { version = "0.0.16", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 
