--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -21,8 +21,11 @@ opt-level = 1
 opt-level = 3
 
 [profile.release]
+lto = true
+opt-level = 3
 codegen-units = 1
-lto = "thin"
+incremental = false
+debug = false
 
 [[bin]]
 name = "server"
