--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -5,15 +5,16 @@ version = "0.1.0"
 authors = ["Reed Debaets <reed.debaets@gmail.com>"]
 
 [dependencies]
-bevy = { version = "0.14", features = ["dynamic_linking"] }
-bevy_easings = "0.14"
-bevy_renet = "0.0.12"
+bevy = { version = "0.15", features = ["dynamic_linking"] }
+bevy_easings = "0.15"
+bevy_renet = "1"
 bimap = "0.6"
-bincode = "1.3"
+bincode = { version = "2", default-features = false, features = ["std", "serde"] }
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
 noise = { version = "0.9" }
-renet = { version = "0.0.16", features = ["serde"] }
-serde = { version = "1.0", features = ["derive"] }
+phf = { version = "0.11", features = ["macros"] }
+renet = { version = "1" }
+serde = { version = "1", features = ["derive"] }
 
 [profile.dev]
 opt-level = 1
