generate terrain as single mesh
* broken commit

* generated terrain init; broken skirts

* skirts, second pass skirts

* update readme

--- a/lib/qrz/Cargo.toml
+++ b/lib/qrz/Cargo.toml
@@ -5,7 +5,8 @@ version = "0.0.1"
 authors = ["Reed Debaets <reed.debaets@gmail.com>"]
 
 [dependencies]
-glam = "0"
+derive_more = { version = "2", features = ["into_iterator"] }
+glam = "0.29"
 serde = { version = "1", features = ["derive"] }
 
 [lib]
