--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Reed Debaets <reed.debaets@gmail.com>"]
 bevy = { version = "0", features = ["dynamic_linking"] }
 bevy_easings = "0"
 # bevy_hanabi = { version = "0", default-features = false, features = [ "3d", "serde" ] }
-bevy_renet = "1"
+bevy_renet = { git = "https://github.com/lucaspoffo/renet.git" }
 bimap = "0"
 bincode = { version = "2", default-features = false, features = ["std", "serde"] }
 chrono = "0"
@@ -18,7 +18,7 @@ kiddo = "5"
 log = { version = "0", features = ["max_level_debug", "release_max_level_warn"] }
 noise = { version = "0" }
 phf = { version = "0", features = ["macros"] }
-renet = { version = "1" }
+renet = { git = "https://github.com/lucaspoffo/renet.git" }
 serde = { version = "1", features = ["derive"] }
 
 [profile.dev]
