--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,12 @@ iyes_perf_ui = "0"
 kiddo = "5"
 log = { version = "0", features = ["max_level_debug", "release_max_level_warn"] }
 noise = { version = "0" }
+pathfinding = "4"
 phf = { version = "0", features = ["macros"] }
 rand = "0"
 renet = { git = "https://github.com/lucaspoffo/renet.git" }
 serde = { version = "1", features = ["derive"] }
+tinyvec = { version = "1", features = ["serde"]}
 
 [profile.dev]
 opt-level = 1
