feat: replace pathfind behavior with bevy_behave tree for curious NPCs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,13 @@ authors = ["Reed Debaets <reed.debaets@gmail.com>"]
 
 [dependencies]
 bevy = { version = "0", features = ["dynamic_linking"] }
+bevy_behave = "0"
 bevy_easings = "0"
-# bevy_hanabi = { version = "0", default-features = false, features = [ "3d", "serde" ] }
 bevy_renet = "2"
 bimap = "0"
 bincode = { version = "2", default-features = false, features = ["std", "serde"] }
 chrono = "0"
-# fixed = "1"
 iyes_perf_ui = "0"
-# kiddo = "5"
 log = { version = "0", features = ["max_level_debug", "release_max_level_warn"] }
 noise = { version = "0" }
 pathfinding = "4"
