feat: Implement chunk-based terrain discovery system with shared caching
- Introduced chunk abstraction with ChunkId and TerrainChunk structures.
- Added WorldDiscoveryCache for shared chunk storage and LRU eviction.
- Implemented PlayerDiscoveryState to track per-player chunk visibility.
- Updated discovery logic to trigger only on chunk boundary crossings.
- Modified network protocol to handle new ChunkData messages.
- Refactored existing systems to integrate new chunk-based discovery.
- Added comprehensive tests for chunk conversion, cache behavior, and discovery logic.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ bincode = { version = "2", default-features = false, features = ["std", "serde"]
 chrono = "0"
 iyes_perf_ui = "0"
 log = { version = "0", features = ["max_level_debug", "release_max_level_warn"] }
+lru = "0"
 noise = { version = "0" }
 pathfinding = "4"
 phf = { version = "0", features = ["macros"] }
