feat: upgrade Bevy from 0.16.1 to 0.17

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,17 @@ version = "0.1.0"
 authors = ["Reed Debaets <reed.debaets@gmail.com>"]
 
 [dependencies]
-bevy = { version = "0", features = ["dynamic_linking"] }
-bevy_easings = "0"
-bevy_renet = "2"
+bevy = { version = "0.17", features = ["dynamic_linking"] }
+bevy_asset = "0.17"
+bevy_camera = "0.17"
+bevy_light = "0.17"
+bevy_mesh = "0.17"
+bevy_easings = "0.17"
+bevy_renet = "3"
 bimap = "0"
 bincode = { version = "2", default-features = false, features = ["std", "serde"] }
 chrono = "0"
-iyes_perf_ui = "0"
+iyes_perf_ui = { git = "https://github.com/mgi388/iyes_perf_ui", branch = "bevy-0.17" }
 log = { version = "0", features = ["max_level_debug", "release_max_level_warn"] }
 lru = "0"
 noise = { version = "0" }
